@@ -36,6 +36,7 @@ import org.junit.Assume;
 import org.junit.Before;
 import org.junit.Test;
 import org.labkey.api.action.SpringActionController;
+import org.labkey.api.assay.AbstractAssayProvider;
 import org.labkey.api.assay.AssayProvider;
 import org.labkey.api.assay.AssayService;
 import org.labkey.api.assay.AssayTableMetadata;
@@ -44,8 +45,10 @@ import org.labkey.api.assay.DefaultAssayRunCreator;
 import org.labkey.api.attachments.AttachmentParent;
 import org.labkey.api.attachments.AttachmentService;
 import org.labkey.api.audit.AuditLogService;
+import org.labkey.api.audit.AuditTypeEvent;
 import org.labkey.api.audit.ExperimentAuditEvent;
 import org.labkey.api.audit.TransactionAuditProvider;
+import org.labkey.api.audit.provider.ContainerAuditProvider;
 import org.labkey.api.cache.Cache;
 import org.labkey.api.cache.CacheManager;
 import org.labkey.api.cache.DbCache;
@@ -69,6 +72,7 @@ import org.labkey.api.exp.query.ExpDataClassDataTable;
 import org.labkey.api.exp.query.ExpDataClassTable;
 import org.labkey.api.exp.query.ExpDataInputTable;
 import org.labkey.api.exp.query.ExpDataTable;
+import org.labkey.api.exp.query.ExpExperimentTable;
 import org.labkey.api.exp.query.ExpMaterialInputTable;
 import org.labkey.api.exp.query.ExpMaterialTable;
 import org.labkey.api.exp.query.ExpRunGroupMapTable;
@@ -120,6 +124,7 @@ import org.labkey.api.util.FileUtil;
 import org.labkey.api.util.GUID;
 import org.labkey.api.util.JunitUtil;
 import org.labkey.api.util.Pair;
+import org.labkey.api.util.ReentrantLockWithName;
 import org.labkey.api.util.StringUtilsLabKey;
 import org.labkey.api.util.TestContext;
 import org.labkey.api.util.UnexpectedException;
@@ -133,7 +138,7 @@ import org.labkey.api.view.UnauthorizedException;
 import org.labkey.api.view.ViewBackgroundInfo;
 import org.labkey.api.view.ViewContext;
 import org.labkey.experiment.ExperimentAuditProvider;
-import org.labkey.experiment.LSIDRelativizer;
+import org.labkey.api.exp.xar.LSIDRelativizer;
 import org.labkey.experiment.XarExportType;
 import org.labkey.experiment.XarExporter;
 import org.labkey.experiment.XarReader;
@@ -212,7 +217,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     public static final String EXPERIMENTAL_DOMAIN_DESIGNER = "experimental-uxdomaindesigner";
 
     private static final List<ExperimentListener> _listeners = new CopyOnWriteArrayList<>();
-    private static final ReentrantLock XAR_IMPORT_LOCK = new ReentrantLock();
+    private static final ReentrantLock XAR_IMPORT_LOCK = new ReentrantLockWithName(ExperimentServiceImpl.class, "XAR_IMPORT_LOCK");
 
     private final List<ExperimentRunTypeSource> _runTypeSources = new CopyOnWriteArrayList<>();
     private final Set<ExperimentDataHandler> _dataHandlers = new HashSet<>();
@@ -982,6 +987,17 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return experiment == null ? null : new ExpExperimentImpl(experiment);
     }
 
+    @Override
+    public List<? extends ExpExperiment> getExpExperiments(Collection<Integer> rowIds)
+    {
+        SimpleFilter filter = new SimpleFilter().addInClause(FieldKey.fromParts(ExpExperimentTable.Column.RowId.name()), rowIds);
+        TableSelector selector = new TableSelector(getTinfoExperiment(), filter, null);
+
+        final List<ExpExperimentImpl> experiments = new ArrayList<>(rowIds.size());
+        selector.forEach(Experiment.class, exp -> experiments.add(new ExpExperimentImpl(exp)));
+
+        return experiments;
+    }
 
     @Override
     public ExpProtocolImpl getExpProtocol(int rowid)
@@ -1671,10 +1687,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         try
         {
+            // next attempt to resolve by rowId
             Integer rowId = ConvertHelper.convert(sampleName, Integer.class);
 
-            // next attempt to resolve by rowId
-            return materialCache.computeIfAbsent(rowId, (x) -> getExpMaterial(c, user, rowId, sampleType));
+            if (rowId != null)
+                return materialCache.computeIfAbsent(rowId, (x) -> getExpMaterial(c, user, rowId, sampleType));
         }
         catch (ConversionException e1)
         {
@@ -3445,7 +3462,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         ClosureQueryHelper.invalidateAll();
     }
 
-
     public void verifyRunEdges(ExpRun run)
     {
         new SyncRunEdges(run)
@@ -3453,7 +3469,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 .verifyEdgesNoInsert(true)
                 .sync(null);
     }
-
 
     public void verifyAllEdges(Container c, @Nullable Integer limit)
     {
@@ -3555,7 +3570,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 ParticipantVisit.ASSAY_RUN_MATERIAL_NAMESPACE.equals(output.getLSIDNamespacePrefix());
     }
 
-
     /**
      * @return the data objects that were attached to the run that should be attached to the run in its new folder
      */
@@ -3568,14 +3582,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return datasToDelete;
     }
 
-
     private void deleteRun(int runId, List<ExpDataImpl> datasToDelete, User user, String userComment)
     {
         ExpRunImpl run = getExpRun(runId);
         if (run == null)
-        {
             return;
-        }
 
         for (ExperimentListener listener : _listeners)
         {
@@ -3611,6 +3622,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             throw new IllegalStateException("Could not resolve protocol for run LSID " + run.getLSID() + " with protocol LSID " + run.getDataObject().getProtocolLSID() );
         }
         auditRunEvent(user, protocol, run, null, "Run deleted", userComment);
+
+        for (ExperimentListener listener : _listeners)
+        {
+            listener.afterRunDelete(run.getProtocol(), run, user);
+        }
     }
 
 
@@ -3771,6 +3787,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     public TableInfo getTinfoObjectLegacyNames()
     {
         return getExpSchema().getTable("ObjectLegacyNames");
+    }
+
+    @Override
+    public TableInfo getTinfoDataTypeExclusion()
+    {
+        return getExpSchema().getTable("DataTypeExclusion");
     }
 
     /**
@@ -4082,147 +4104,146 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (selectedRunIds.isEmpty())
             return;
 
-        for (Integer runId : selectedRunIds)
+        try (DbScope.Transaction transaction = ensureTransaction())
         {
-            try (DbScope.Transaction transaction = ensureTransaction())
+            for (Integer runId : selectedRunIds)
             {
                 final ExpRunImpl run = getExpRun(runId);
-                if (run != null)
+                if (run == null)
+                    continue;
+
+                SimpleFilter containerFilter = new SimpleFilter(FieldKey.fromParts("RunId"), runId);
+                Table.delete(getTinfoAssayQCFlag(), containerFilter);
+
+                ExpProtocol protocol = run.getProtocol();
+                ProtocolImplementation protocolImpl = null;
+                if (protocol != null)
                 {
-                    SimpleFilter containerFilter = new SimpleFilter(FieldKey.fromParts("RunId"), runId);
-                    Table.delete(getTinfoAssayQCFlag(), containerFilter);
+                    protocolImpl = protocol.getImplementation();
 
-                    ExpProtocol protocol = run.getProtocol();
-                    ProtocolImplementation protocolImpl = null;
-                    if (protocol != null)
+                    if (!run.canDelete(user))
+                        throw new UnauthorizedException("You do not have permission to delete " +
+                                (ExpProtocol.isSampleWorkflowProtocol(run.getProtocol().getLSID()) ? "jobs" : "runs")
+                                + " in " + run.getContainer());
+                    StudyPublishService publishService = StudyPublishService.get();
+                    if (publishService != null)
                     {
-                        protocolImpl = protocol.getImplementation();
+                        AssayWellExclusionService svc = AssayWellExclusionService.getProvider(protocol);
+                        if (svc != null)
+                            svc.deleteExclusionsForRun(protocol, runId);
 
-                        if (!run.canDelete(user))
-                            throw new UnauthorizedException("You do not have permission to delete " +
-                                    (ExpProtocol.isSampleWorkflowProtocol(run.getProtocol().getLSID()) ? "jobs" : "runs")
-                                    + " in " + run.getContainer());
-                        StudyPublishService publishService = StudyPublishService.get();
-                        if (publishService != null)
+                        for (Dataset dataset : publishService.getDatasetsForAssayRuns(Collections.singletonList(run), user))
                         {
-                            AssayWellExclusionService svc = AssayWellExclusionService.getProvider(protocol);
-                            if (svc != null)
-                                svc.deleteExclusionsForRun(protocol, runId);
-
-                            for (Dataset dataset : publishService.getDatasetsForAssayRuns(Collections.singletonList(run), user))
+                            // NOTE: these datasets come from various different containers
+                            UserSchema schema = QueryService.get().getUserSchema(user, dataset.getContainer(), "study");
+                            TableInfo tableInfo = schema.getTable(dataset.getName());
+                            if (null == tableInfo || !dataset.hasPermission(user, DeletePermission.class))
                             {
-                                // NOTE: these datasets come from various different containers
-                                UserSchema schema = QueryService.get().getUserSchema(user, dataset.getContainer(), "study");
-                                TableInfo tableInfo = schema.getTable(dataset.getName());
-                                if (null == tableInfo || !dataset.hasPermission(user, DeletePermission.class))
-                                {
-                                    throw new UnauthorizedException("Cannot delete rows from dataset " + dataset);
-                                }
-
-                                AssayProvider provider = AssayService.get().getProvider(protocol);
-                                if (provider != null)
-                                {
-                                    AssayTableMetadata tableMetadata = provider.getTableMetadata(protocol);
-                                    SimpleFilter filter = new SimpleFilter(tableMetadata.getRunRowIdFieldKeyFromResults(), run.getRowId());
-                                    Collection<String> lsids = new TableSelector(tableInfo, singleton("LSID"), filter, null).getCollection(String.class);
-
-                                    // Add an audit event to the link to study history
-                                    publishService.addRecallAuditEvent(run.getContainer(), user, dataset, lsids.size(), null);
-
-                                    // Do the actual delete on the dataset for the rows in question
-                                    dataset.deleteDatasetRows(user, lsids);
-                                }
-                            }
-                        }
-                        else
-                        {
-                            LOG.info("Skipping delete of dataset rows associated with this run: Study service not available.");
-                        }
-                    }
-
-                    // Grab these to delete after we've deleted the Data rows
-                    List<ExpDataImpl> datasToDelete = getAllDataOwnedByRun(runId);
-
-                    // Find the cross-run file input or output exp.data to delete after the run is deleted:
-                    // - data outputs that have the same dataFileUrl as an "cross run input" exp.data input and aren't being used in another run.
-                    // - data inputs with "cross run input" role, have no custom file properties, and aren't being used in another run.
-                    List<ExpDataImpl> crossRunInputs = new ArrayList<>();
-                    List<ExpDataImpl> crossRunOutputs = new ArrayList<>();
-                    List<ExpDataImpl> inputData = run.getInputDatas(DefaultAssayRunCreator.CROSS_RUN_DATA_INPUT_ROLE, null);
-                    if (!inputData.isEmpty())
-                    {
-                        for (ExpDataImpl input : inputData)
-                        {
-                            // Find a matching exp.data output with the same dataFileUrl
-                            for (ExpDataImpl output : datasToDelete)
-                            {
-                                if (input.getDataFileUrl().equals(output.getDataFileUrl()))
-                                {
-                                    // Don't delete the exp.data output if it is being used in other runs
-                                    List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(output));
-                                    otherUsages.remove(run);
-                                    if (!otherUsages.isEmpty())
-                                    {
-                                        LOG.debug("Skipping delete of cross-run output data '" + output.getName() + "' (" + output.getRowId() + ") used by other runs: " + otherUsages.stream().map(ExpRun::getName).collect(Collectors.joining(", ")));
-                                        break;
-                                    }
-
-                                    crossRunOutputs.add(output);
-                                }
+                                throw new UnauthorizedException("Cannot delete rows from dataset " + dataset);
                             }
 
-                            // If there are comments or file properties attached to the exp.data don't delete it.
-                            // TODO: We don't want to delete exp.data for uploaded files since we track created/createdby and other metadata... is there a better way to identify these exp.data we don't want to delete?
-                            // CONSIDER: move these properties to the matching output exp.data with the same dataFileUrl?
-                            if (hasFileProperties(container, input))
+                            AssayProvider provider = AssayService.get().getProvider(protocol);
+                            if (provider != null)
                             {
-                                LOG.debug("Skipping delete of cross-run input data '" + input.getName() + "' (" + input.getRowId() + ") with custom file properties");
-                                continue;
-                            }
+                                AssayTableMetadata tableMetadata = provider.getTableMetadata(protocol);
+                                SimpleFilter filter = new SimpleFilter(tableMetadata.getRunRowIdFieldKeyFromResults(), run.getRowId());
+                                Collection<String> lsids = new TableSelector(tableInfo, singleton("LSID"), filter, null).getCollection(String.class);
 
-                            // If the file has no other usages, we can delete it.
-                            List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(input));
-                            otherUsages.remove(run);
-                            if (otherUsages.isEmpty())
-                            {
-                                crossRunInputs.add(input);
+                                // Add an audit event to the link to study history
+                                publishService.addRecallAuditEvent(run.getContainer(), user, dataset, lsids.size(), null);
+
+                                // Do the actual delete on the dataset for the rows in question
+                                dataset.deleteDatasetRows(user, lsids);
                             }
                         }
                     }
-
-                    // Archive all data files prior to deleting
-                    //  ideally this would be transacted as a commit task but we decided against it due to complications
-                    run.archiveDataFiles(user);
-
-                    deleteRun(runId, datasToDelete, user, userComment);
-
-                    for (ExpData data : datasToDelete)
+                    else
                     {
-                        ExperimentDataHandler handler = data.findDataHandler();
-                        handler.deleteData(data, container, user);
+                        LOG.info("Skipping delete of dataset rows associated with this run: Study service not available.");
                     }
-
-                    // Delete the cross run data completely
-                    for (ExpDataImpl data : crossRunInputs)
-                    {
-                        LOG.debug("Deleting cross-run input data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
-                        data.delete(user, false);
-                    }
-                    for (ExpDataImpl data : crossRunOutputs)
-                    {
-                        LOG.debug("Deleting cross-run output data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
-                        data.delete(user, false);
-                    }
-
-                    if (protocolImpl != null)
-                        protocolImpl.onRunDeleted(container, user);
                 }
 
-                transaction.commit();
+                // Grab these to delete after we've deleted the Data rows
+                List<ExpDataImpl> datasToDelete = getAllDataOwnedByRun(runId);
+
+                // Find the cross-run file input or output exp.data to delete after the run is deleted:
+                // - data outputs that have the same dataFileUrl as an "cross run input" exp.data input and aren't being used in another run.
+                // - data inputs with "cross run input" role, have no custom file properties, and aren't being used in another run.
+                List<ExpDataImpl> crossRunInputs = new ArrayList<>();
+                List<ExpDataImpl> crossRunOutputs = new ArrayList<>();
+                List<ExpDataImpl> inputData = run.getInputDatas(DefaultAssayRunCreator.CROSS_RUN_DATA_INPUT_ROLE, null);
+                if (!inputData.isEmpty())
+                {
+                    for (ExpDataImpl input : inputData)
+                    {
+                        // Find a matching exp.data output with the same dataFileUrl
+                        for (ExpDataImpl output : datasToDelete)
+                        {
+                            if (input.getDataFileUrl().equals(output.getDataFileUrl()))
+                            {
+                                // Don't delete the exp.data output if it is being used in other runs
+                                List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(output));
+                                otherUsages.remove(run);
+                                if (!otherUsages.isEmpty())
+                                {
+                                    LOG.debug("Skipping delete of cross-run output data '" + output.getName() + "' (" + output.getRowId() + ") used by other runs: " + otherUsages.stream().map(ExpRun::getName).collect(Collectors.joining(", ")));
+                                    break;
+                                }
+
+                                crossRunOutputs.add(output);
+                            }
+                        }
+
+                        // If there are comments or file properties attached to the exp.data don't delete it.
+                        // TODO: We don't want to delete exp.data for uploaded files since we track created/createdby and other metadata... is there a better way to identify these exp.data we don't want to delete?
+                        // CONSIDER: move these properties to the matching output exp.data with the same dataFileUrl?
+                        if (hasFileProperties(container, input))
+                        {
+                            LOG.debug("Skipping delete of cross-run input data '" + input.getName() + "' (" + input.getRowId() + ") with custom file properties");
+                            continue;
+                        }
+
+                        // If the file has no other usages, we can delete it.
+                        List<? extends ExpRun> otherUsages = getRunsUsingDatas(List.of(input));
+                        otherUsages.remove(run);
+                        if (otherUsages.isEmpty())
+                        {
+                            crossRunInputs.add(input);
+                        }
+                    }
+                }
+
+                // Archive all data files prior to deleting
+                //  ideally this would be transacted as a commit task but we decided against it due to complications
+                run.archiveDataFiles(user);
+
+                deleteRun(runId, datasToDelete, user, userComment);
+
+                for (ExpData data : datasToDelete)
+                {
+                    ExperimentDataHandler handler = data.findDataHandler();
+                    handler.deleteData(data, container, user);
+                }
+
+                // Delete the cross run data completely
+                for (ExpDataImpl data : crossRunInputs)
+                {
+                    LOG.debug("Deleting cross-run input data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
+                    data.delete(user, false);
+                }
+                for (ExpDataImpl data : crossRunOutputs)
+                {
+                    LOG.debug("Deleting cross-run output data: name=" + data.getName() + ", rowId=" + data.getRowId() + ", dataFileUrl=" + data.getDataFileUrl());
+                    data.delete(user, false);
+                }
+
+                if (protocolImpl != null)
+                    protocolImpl.onRunDeleted(container, user);
             }
+
+            transaction.commit();
         }
     }
-
 
     // return true if the data has a comment or any other custom file properties
     private boolean hasFileProperties(Container c, ExpData data)
@@ -4416,6 +4437,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             int[] orphanedProtocolIds = ArrayUtils.toPrimitive(new SqlSelector(getExpSchema(), sql).getArray(Integer.class));
             deleteProtocolByRowIds(c, user,null, orphanedProtocolIds);
 
+            removeDataTypeExclusion(Arrays.asList(ArrayUtils.toObject(selectedProtocolIds)), DataTypeForExclusion.AssayDesign);
             if (assayService != null)
             {
                 transaction.addCommitTask(() -> {
@@ -4437,7 +4459,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
 
         if (assayService != null)
-            assayService.unindexAssays(Collections.unmodifiableCollection(expProtocols));
+            assayService.deindexAssays(Collections.unmodifiableCollection(expProtocols));
     }
 
     private void deleteProtocolInputs(Container c, String protocolIdsInClause)
@@ -4630,9 +4652,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     sampleTypeAliquotRoots.computeIfAbsent(sampleType, (k) -> new HashSet<>())
                             .add(material.getRootMaterialLSID());
                 }
-
             }
-
 
             try (Timing ignored = MiniProfiler.step("beforeDelete"))
             {
@@ -4748,7 +4768,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                         List<ExpMaterialImpl> rootSamples = getExpMaterialsByLsid(rootLsids);
                         Set<Integer> rootSampleIds = new HashSet<>();
                         rootSamples.forEach(p -> rootSampleIds.add(p.getRowId()));
-                        SampleTypeService.get().recomputeSamplesRollup(rootSampleIds, parentSampleType.getMetricUnit());
+                        SampleTypeService.get().recomputeSamplesRollup(rootSampleIds, parentSampleType.getMetricUnit(), container);
                     }
                 }
                 catch (SQLException e)
@@ -4776,11 +4796,65 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     private void deleteRunsUsingInputs(User user, Collection<Data> dataItems, Collection<Material> materialItems)
     {
         var runsUsingItems = new ArrayList<ExpRun>();
-        if (null != dataItems && !dataItems.isEmpty())
-            runsUsingItems.addAll(getRunsUsingDataIds(dataItems.stream().map(RunItem::getRowId).collect(Collectors.toList())));
+        List<Integer> dataIds = dataItems == null || dataItems.isEmpty() ? Collections.emptyList() : dataItems.stream().map(RunItem::getRowId).toList();
+        Set<Integer> sampleIds = materialItems == null || materialItems.isEmpty() ? Collections.emptySet() : materialItems.stream().map(RunItem::getRowId).collect(Collectors.toSet());
 
-        if (null != materialItems && !materialItems.isEmpty())
-            runsUsingItems.addAll(getDeletableRunsFromMaterials(ExpMaterialImpl.fromMaterials(materialItems)));
+        if (!sampleIds.isEmpty())
+        {
+            // get runs where these samples are used as inputs
+            runsUsingItems.addAll(getDerivedRunsFromMaterial(sampleIds));
+            // retain runs if there are other inputs that are not being deleted
+            if (!runsUsingItems.isEmpty())
+            {
+                Set<ExpRun> runsToKeep = new HashSet<>();
+                runsUsingItems.forEach(run -> {
+                    run.getMaterialInputs().keySet().forEach(
+                            sample -> {
+                                if (!sampleIds.contains(sample.getRowId()))
+                                    runsToKeep.add(run);
+                            }
+                    );
+                    run.getDataInputs().keySet().forEach(
+                            dataObject -> {
+                                if (!dataIds.contains(dataObject.getRowId()))
+                                    runsToKeep.add(run);
+                            }
+                    );
+                });
+                runsUsingItems.removeAll(runsToKeep);
+            }
+            // add runs that will no longer have any outputs
+            runsUsingItems.addAll(getDeletableSourceRunsFromInputRowId(sampleIds, getTinfoMaterial(), Collections.emptySet(), getTinfoData()));
+        }
+
+        if (!dataIds.isEmpty())
+        {
+            // get runs where these data objects are used as inputs
+            var dataInputRuns = new ArrayList<ExpRun>(getDerivedRunsFromData(dataIds));
+            // retain runs if there are other inputs that are not being deleted
+            if (!dataInputRuns.isEmpty())
+            {
+                Set<ExpRun> runsToKeep = new HashSet<>();
+                dataInputRuns.forEach(run -> {
+                    run.getMaterialInputs().keySet().forEach(
+                            sample -> {
+                                if (!sampleIds.contains(sample.getRowId()))
+                                    runsToKeep.add(run);
+                            }
+                    );
+                    run.getDataInputs().keySet().forEach(
+                            dataObject -> {
+                                if (!dataIds.contains(dataObject.getRowId()))
+                                    runsToKeep.add(run);
+                            }
+                    );
+                });
+                dataInputRuns.removeAll(runsToKeep);
+            }
+            runsUsingItems.addAll(dataInputRuns);
+            // get runs that will no longer have any outputs
+            runsUsingItems.addAll(getDeletableSourceRunsFromInputRowId(dataIds, getTinfoData(), sampleIds, getTinfoMaterial()));
+        }
 
         List<? extends ExpRun> runsToDelete = runsDeletedWithInput(runsUsingItems);
         if (runsToDelete.isEmpty())
@@ -4818,9 +4892,10 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
     }
 
-    private Collection<? extends ExpRun> getDeleteableSourceRunsFromMaterials(Set<Integer> materialIds)
+    /* Finds the runs where all outputs are also being deleted */
+    private Collection<? extends ExpRun> getDeletableSourceRunsFromInputRowId(Collection<Integer> rowIds, TableInfo primaryTableInfo, Collection<Integer> siblingRowIds, TableInfo siblingTableInfo)
     {
-        if (materialIds == null || materialIds.isEmpty())
+        if (rowIds == null || rowIds.isEmpty())
             return Collections.emptyList();
 
         /* Ex. SQL
@@ -4840,26 +4915,56 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                         WHERE m3.rowId in (3592, 3593, 3594)
                             AND m2.rowId = m3.rowId
                     )
+            )
+            AND NOT EXIST (
+             -- Check for siblings that are not being deleted
+                SELECT DISTINCT d.runId
+                FROM exp.data d
+                WHERE m.rowId in (3592, 3593, 3594)
+                    AND m.runId = d.runId
+                    -- exclude siblings from selected materialIds
+                    AND NOT EXIST (
+                        SELECT rowId
+                        FROM exp.data d2
+                        WHERE d2.rowId in (23592, 23593, 23594)
+                            AND d.rowId = d2.rowId
+                    )
+
             );
          */
 
-        SQLFragment idInclause = getAppendInClause(materialIds);
+        SQLFragment idInClause = getAppendInClause(rowIds);
+        SQLFragment siblingIdInClause = getAppendInClause(siblingRowIds);
 
         SQLFragment sql = new SQLFragment(
                 "SELECT DISTINCT m.runId\n")
-                .append("FROM ").append(getTinfoMaterial(), "m").append("\n")
-                .append("WHERE m.rowId ").append(idInclause).append("\n")
+                .append("FROM ").append(primaryTableInfo, "m").append("\n")
+                .append("WHERE m.rowId ").append(idInClause).append("\n")
                 .append("AND NOT EXISTS (\n")
                 .append("SELECT DISTINCT m2.runId\n")
-                .append("FROM ").append(getTinfoMaterial(), "m2").append("\n")
-                .append("WHERE m.rowId ").append(idInclause).append("\n")
+                .append("FROM ").append(primaryTableInfo, "m2").append("\n")
+                .append("WHERE m.rowId ").append(idInClause).append("\n")
                 .append("AND m.runId = m2.runId\n")
                 .append("AND NOT EXISTS (\n") // m2.rowID not in materialIds
-                .append("SELECT rowId FROM ").append(getTinfoMaterial(), "m3").append("\n")
-                .append("WHERE m3.rowId ").append(idInclause).append("\n")
+                .append("SELECT rowId FROM ").append(primaryTableInfo, "m3").append("\n")
+                .append("WHERE m3.rowId ").append(idInClause).append("\n")
                 .append("AND m2.rowId = m3.rowId\n")
-                .append(")\n")
-                .append(")");
+                .append("))\n")
+                .append("AND NOT EXISTS (\n")
+                .append("SELECT DISTINCT s.runId\n")
+                .append("FROM ").append(siblingTableInfo, "s").append("\n")
+                .append("WHERE m.rowId ").append(idInClause).append("\n")
+                .append("AND m.runId = s.runId\n");
+        if (!siblingRowIds.isEmpty())
+        {
+            sql.append("AND NOT EXISTS (\n") // s2.rowID not in siblingRowIds
+                    .append("SELECT rowId FROM ").append(siblingTableInfo, "s2").append("\n")
+                    .append("WHERE s2.rowId ").append(siblingIdInClause).append("\n")
+                    .append("AND s.rowId = s2.rowId\n")
+                    .append(")");
+        }
+        sql.append(")");
+
 
         return ExpRunImpl.fromRuns(getRunsForRunIds(sql));
     }
@@ -4870,6 +4975,15 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             return Collections.emptyList();
 
         return ExpRunImpl.fromRuns(getRunsForRunIds(getTargetRunIdsFromMaterialIds(getAppendInClause(materialIds))));
+    }
+
+
+    private Collection<? extends ExpRun> getDerivedRunsFromData(Collection<Integer> rowIds)
+    {
+        if (rowIds == null || rowIds.isEmpty())
+            return Collections.emptyList();
+
+        return ExpRunImpl.fromRuns(getRunsForRunIds(getTargetRunIdsFromDataIds(getAppendInClause(rowIds))));
     }
 
     /**
@@ -4927,7 +5041,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return parents;
 
     }
-
 
     public void deleteDataByRowIds(User user, Container container, Collection<Integer> selectedDataIds)
     {
@@ -5042,10 +5155,12 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             SearchService ss = SearchService.get();
             if (null != ss)
             {
+                Set<String> documentIds = new HashSet<>();
                 for (ExpDataImpl data : ExpDataImpl.fromDatas(datas))
                 {
-                    ss.deleteResource(data.getDocumentId());
+                    documentIds.add(data.getDocumentId());
                 }
+                ss.deleteResources(documentIds);
             }
 
             transaction.commit();
@@ -5065,13 +5180,14 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
 
         ExpExperimentImpl experiment = getExpExperiment(rowId);
-        if(experiment == null)
+        if (experiment == null)
             return;
 
         deleteExpExperiment(c, user, experiment);
     }
 
-    private void deleteExpExperiment(Container c, User user, ExpExperimentImpl experiment)
+    // TODO: This should be refactored to support deletion of multiple ExpExperiments at one time
+    private void deleteExpExperiment(Container c, User user, @NotNull ExpExperimentImpl experiment)
     {
         try (DbScope.Transaction t = ensureTransaction())
         {
@@ -5096,7 +5212,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             OntologyManager.deleteOntologyObjects(experiment.getContainer(), experiment.getLSID());
 
             // Inform the listeners.
-            for (ExperimentListener listener: _listeners)
+            for (ExperimentListener listener : _listeners)
             {
                 listener.beforeExperimentDeleted(c, user, experiment);
             }
@@ -5105,6 +5221,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                     + " WHERE RowId = " + experiment.getRowId()
                     + " AND Container = ?", experiment.getContainer());
             executor.execute(sql);
+
+            for (ExperimentListener listener : _listeners)
+            {
+                listener.afterExperimentDeleted(c, user, experiment);
+            }
 
             t.commit();
         }
@@ -5183,11 +5304,11 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 deleteExpExperiment(c, user, exp);
             }
 
-            // now delete protocols (including their nested actions and parameters.
+            // now delete protocols (including their nested actions and parameters).
             deleteProtocolByRowIds(c, user, null, protIds);
 
             // now delete starting materials that were not associated with a MaterialSource upload.
-            // we get this list now so that it doesn't include all of the run-scoped Materials that were
+            // we get this list now so that it doesn't include all the run-scoped Materials that were
             // deleted already
             sql = "SELECT RowId FROM exp.Material WHERE Container = ?";
             Collection<Integer> matIds = new SqlSelector(getExpSchema(), sql, c).getCollection(Integer.class);
@@ -5555,6 +5676,26 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
      */
     private SQLFragment getTargetRunIdsFromMaterialIds(SQLFragment materialRowIdSQL)
     {
+        return getTargetRunIdsFromInputRowIds(materialRowIdSQL, getTinfoMaterialInput(), "MaterialID");
+    }
+
+    /**
+     * Generate a query to get the runIds where the supplied set of material rowIds were used as inputs
+     * @param rowIdSQL -- SQL clause generating material rowIds used to limit results
+     * @return Query to retrieve set of runIds from supplied input material ids
+     */
+    private SQLFragment getTargetRunIdsFromDataIds(SQLFragment rowIdSQL)
+    {
+        return getTargetRunIdsFromInputRowIds(rowIdSQL, getTinfoDataInput(), "DataID");
+    }
+
+    /**
+     * Generate a query to get the runIds where the supplied set of material rowIds were used as inputs
+     * @param rowIdSQL -- SQL clause generating rowIds used to limit results
+     * @return Query to retrieve set of runIds from supplied input material ids
+     */
+    private SQLFragment getTargetRunIdsFromInputRowIds(SQLFragment rowIdSQL, TableInfo inputTable, String idColumn)
+    {
         // ex SQL:
         /*
             SELECT pa.RunId
@@ -5569,10 +5710,10 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
         sql.append("SELECT pa.RunId\n");
         sql.append("FROM ").append(getTinfoProtocolApplication(), "pa").append(",\n\t");
-        sql.append(getTinfoMaterialInput(), "mi").append("\n");
-        sql.append("WHERE mi.TargetApplicationId = pa.RowId ")
-            .append("AND pa.cpastype = ?\n").add(ExperimentRun.name())
-            .append("AND mi.MaterialID ").append(materialRowIdSQL);
+        sql.append(inputTable, "i").append("\n");
+        sql.append("WHERE i.TargetApplicationId = pa.RowId ")
+                .append("AND pa.cpastype = ?\n").add(ExperimentRun.name())
+                .append("AND i.").append(idColumn).append(" ").append(rowIdSQL);
 
         return sql;
     }
@@ -5675,6 +5816,8 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             SqlExecutor executor = new SqlExecutor(getExpSchema());
             executor.execute("UPDATE " + getTinfoProtocolInput() + " SET dataClassId = NULL WHERE dataClassId = ?", rowId);
             executor.execute("DELETE FROM " + getTinfoDataClass() + " WHERE RowId = ?", rowId);
+
+            removeDataTypeExclusion(Collections.singleton(rowId), DataTypeForExclusion.DataClass);
 
             transaction.addCommitTask(() -> clearDataClassCache(dcContainer), DbScope.CommitTaskOption.IMMEDIATE, POSTCOMMIT, POSTROLLBACK);
             transaction.commit();
@@ -7164,6 +7307,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         if (parent == null)
             throw new IllegalArgumentException("You must create aliquot from a parent material or aliquot");
 
+        if (aliquots.contains(parent))
+            throw new ExperimentException("The material " + parent.getName() + " cannot be its own aliquot.");
+
         ExpProtocol protocol = ensureSampleAliquotProtocol(info.getUser());
         ExpRunImpl run = createExperimentRun(info.getContainer(), getAliquotRunName(parent, aliquots.size()));
         run.setProtocol(protocol);
@@ -7503,6 +7649,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             //TODO do DataClasses actually support default values? The DataClassDomainKind does not override showDefaultValueSettings to return true so it isn't shown in the UI.
             DefaultValueService.get().setDefaultValues(domain.getContainer(), defaultValues);
 
+            if (options != null && options.getExcludedContainerIds() != null && !options.getExcludedContainerIds().isEmpty())
+                ExperimentService.get().ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), impl.getRowId(), u);
+
             tx.addCommitTask(() -> clearDataClassCache(c), DbScope.CommitTaskOption.IMMEDIATE, POSTCOMMIT, POSTROLLBACK);
             tx.commit();
         }
@@ -7565,6 +7714,9 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
             if (hasNameChange)
                 addObjectLegacyName(dataClass.getObjectId(), ExperimentServiceImpl.getNamespacePrefix(ExpDataClass.class), oldDataClassName, u);
+
+            if (options != null && options.getExcludedContainerIds() != null)
+                ExperimentService.get().ensureDataTypeContainerExclusions(DataTypeForExclusion.DataClass, options.getExcludedContainerIds(), dataClass.getRowId(), u);
 
             if (!errors.hasErrors())
             {
@@ -7748,21 +7900,53 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         }
     }
 
+    /**
+     * There are subtle differences between File.toURI() and Path.toUri() so ensure you pick the correct getExpDatasUnderPath method.
+     */
     @Override
     @NotNull
     public List<ExpDataImpl> getExpDatasUnderPath(@NotNull File path, @Nullable Container c)
+    {
+        return getExpDatasUnderPath(path.toURI().toString(), c, false);
+    }
+
+    @Override
+    @NotNull
+    public List<ExpDataImpl> getExpDatasUnderPath(@NotNull Path path, @Nullable Container c, boolean includeExactPath)
+    {
+        return getExpDatasUnderPath(path.toUri().toString(), c, includeExactPath);
+    }
+
+    @NotNull
+    public List<ExpDataImpl> getExpDatasUnderPath(@NotNull String path, @Nullable Container c, boolean includeExactPath)
     {
         SimpleFilter filter = new SimpleFilter();
         if (c != null)
             filter.addCondition(FieldKey.fromParts("Container"), c);
 
-        String prefix = path.toURI().toString();
+        String prefix = path;
         if (!prefix.endsWith("/"))
             prefix = prefix + "/";
 
         filter.addCondition(FieldKey.fromParts("datafileurl"), prefix, CompareType.STARTS_WITH);
-        filter.addCondition(FieldKey.fromParts("datafileurl"), path.toURI().toString(), CompareType.NEQ);
-        return ExpDataImpl.fromDatas(new TableSelector(getTinfoData(), filter, null).getArrayList(Data.class));
+        filter.addCondition(FieldKey.fromParts("datafileurl"), path, CompareType.NEQ);
+        List<ExpDataImpl> childDatas = ExpDataImpl.fromDatas(new TableSelector(getTinfoData(), filter, null).getArrayList(Data.class));
+
+        if (includeExactPath)
+        {
+            // Include exp.data at the path itself
+            prefix = prefix.substring(0, prefix.length() - 1);
+
+            filter = new SimpleFilter();
+            if (c != null)
+                filter.addCondition(FieldKey.fromParts("Container"), c);
+            filter.addCondition(FieldKey.fromParts("datafileurl"), prefix);
+
+            childDatas.addAll(ExpDataImpl.fromDatas(new TableSelector(getTinfoData(), filter, null).getArrayList(Data.class)));
+        }
+
+        return childDatas;
+
     }
 
     @Override
@@ -8052,6 +8236,22 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         _listeners.add(listener);
     }
 
+    public void onAfterExperimentSaved(ExpExperiment experiment, Container container, User user)
+    {
+        for (ExperimentListener listener : _listeners)
+        {
+            listener.afterExperimentSaved(container, user, experiment);
+        }
+    }
+
+    public void onAfterRunSaved(ExpProtocol protocol, ExpRun run, Container container, User user)
+    {
+        for (ExperimentListener listener : _listeners)
+        {
+            listener.afterRunSaved(container, user, protocol, run);
+        }
+    }
+
     @Override
     public void onBeforeRunSaved(ExpProtocol protocol, ExpRun run, Container container, User user) throws BatchValidationException
     {
@@ -8091,7 +8291,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         {
             Set<Integer> materialIds = materials.stream().map(ExpMaterial::getRowId).collect(toSet());
             runsUsingItems.addAll(getDerivedRunsFromMaterial(materialIds));
-            runsUsingItems.addAll(getDeleteableSourceRunsFromMaterials(materialIds));
+            runsUsingItems.addAll(getDeletableSourceRunsFromInputRowId(materialIds, getTinfoMaterial(), Collections.emptySet(), getTinfoData()));
         }
 
         return new ArrayList<>(runsDeletedWithInput(runsUsingItems));
@@ -8133,6 +8333,212 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     public List<QueryViewProvider<ExpRun>> getRunOutputsViewProviders()
     {
         return Collections.unmodifiableList(_runOutputsQueryViews);
+    }
+
+    private void addDataTypeExclusion(int rowId, DataTypeForExclusion dataType, String excludedContainerId, User user)
+    {
+        Map<String, Object> fields = new HashMap<>();
+        fields.put("DataTypeRowId", rowId);
+        fields.put("DataType", dataType.name());
+        fields.put("ExcludedContainer", excludedContainerId);
+        Table.insert(user, getTinfoDataTypeExclusion(), fields);
+    }
+
+    @Override
+    public void removeContainerDataTypeExclusions(String containerId)
+    {
+        SQLFragment sql = new SQLFragment("DELETE FROM  ")
+                .append(getTinfoDataTypeExclusion())
+                .append(" WHERE excludedContainer = ? ");
+        sql.add(containerId);
+        new SqlExecutor(getExpSchema()).execute(sql);
+    }
+
+    @Override
+    public void removeDataTypeExclusion(Collection<Integer> rowIds, DataTypeForExclusion dataType)
+    {
+        removeDataTypeExclusion(rowIds, dataType, null);
+    }
+
+    private void removeDataTypeExclusion(Collection<Integer> rowIds, DataTypeForExclusion dataType, @Nullable String excludedContainerId)
+    {
+        SQLFragment sql = new SQLFragment("DELETE FROM  ")
+                .append(getTinfoDataTypeExclusion())
+                .append(" WHERE DataTypeRowId ");
+        sql.appendInClause(rowIds, getExpSchema().getSqlDialect());
+        sql.append(" AND DataType = ?");
+        sql.add(dataType.name());
+        if (!StringUtils.isEmpty(excludedContainerId))
+        {
+            sql.append(" AND ExcludedContainer = ?");
+            sql.add(excludedContainerId);
+        }
+
+        new SqlExecutor(getExpSchema()).execute(sql);
+    }
+
+    @NotNull private Map<String, Object>[] _getContainerDataTypeExclusions(@Nullable DataTypeForExclusion dataType, @Nullable String excludedContainerIdOrPath, @Nullable Integer dataTypeRowId)
+    {
+        SQLFragment sql = new SQLFragment("SELECT DataTypeRowId, DataType, ExcludedContainer FROM ")
+                .append(getTinfoDataTypeExclusion())
+                .append(" WHERE ");
+        String and = "";
+        if (dataType != null)
+        {
+            sql.append("DataType = ? ");
+            sql.add(dataType.name());
+            and = " AND ";
+        }
+
+        if (!StringUtils.isEmpty(excludedContainerIdOrPath))
+        {
+            String excludedContainerId = excludedContainerIdOrPath;
+            if (!GUID.isGUID(excludedContainerIdOrPath))
+            {
+                Container container = ContainerManager.getForPath(excludedContainerIdOrPath);
+                if (container != null)
+                    excludedContainerId = container.getId();
+            }
+
+            sql.append(and);
+            sql.append("ExcludedContainer = ? ");
+            sql.add(excludedContainerId);
+            and = " AND ";
+        }
+
+        if (dataTypeRowId != null && dataTypeRowId > 0)
+        {
+            sql.append(and);
+            sql.append("DataTypeRowId = ? ");
+            sql.add(dataTypeRowId);
+        }
+
+        return new SqlSelector(getTinfoDataTypeExclusion().getSchema(), sql).getMapArray();
+    }
+
+    @Override
+    public @NotNull Map<DataTypeForExclusion, Set<Integer>> getContainerDataTypeExclusions(@NotNull String excludedContainerId)
+    {
+        Map<String, Object>[] exclusions = _getContainerDataTypeExclusions(null, excludedContainerId, null);
+
+        Map<DataTypeForExclusion, Set<Integer>> typeExclusions = new HashMap<>();
+        for (Map<String, Object> exclusion : exclusions)
+        {
+            String dataTypeStr = (String) exclusion.get("DataType");
+            DataTypeForExclusion dataType = DataTypeForExclusion.valueOf(dataTypeStr);
+            if (!typeExclusions.containsKey(dataType))
+                typeExclusions.put(dataType, new HashSet<>());
+            typeExclusions.get(dataType).add((Integer) exclusion.get("DataTypeRowId"));
+        }
+
+        return typeExclusions;
+    }
+
+    @Override
+    public Set<String> getDataTypeContainerExclusions(@NotNull DataTypeForExclusion dataType, @NotNull Integer dataTypeRowId)
+    {
+        Map<String, Object>[] exclusions = _getContainerDataTypeExclusions(dataType, null, dataTypeRowId);
+        Set<String> excludedProjects = new HashSet<>();
+        for (Map<String, Object> exclusion : exclusions)
+            excludedProjects.add((String) exclusion.get("ExcludedContainer"));
+        return excludedProjects;
+    }
+
+
+    private Set<Integer> _getContainerDataTypeExclusions(DataTypeForExclusion dataType, String excludedContainerId)
+    {
+        Set<Integer> excludedRowIds = new HashSet<>();
+        Map<String, Object>[] exclusions = _getContainerDataTypeExclusions(dataType, excludedContainerId, null);
+        for (Map<String, Object> exclusion : exclusions)
+            excludedRowIds.add((Integer) exclusion.get("DataTypeRowId"));
+
+        return excludedRowIds;
+    }
+
+    @Override
+    public void ensureContainerDataTypeExclusions(@NotNull DataTypeForExclusion dataType, @Nullable Collection<Integer> excludedDataTypeRowIds, @NotNull String excludedContainerId, User user)
+    {
+        if (excludedDataTypeRowIds == null)
+            return;
+
+        Set<Integer> previousExclusions = _getContainerDataTypeExclusions(dataType, excludedContainerId);
+        Set<Integer> updatedExclusions = new HashSet<>(excludedDataTypeRowIds);
+
+        Set<Integer> toAdd = new HashSet<>(updatedExclusions);
+        toAdd.removeAll(previousExclusions);
+
+        Set<Integer> toRemove = new HashSet<>(previousExclusions);
+        toRemove.removeAll(updatedExclusions);
+
+        if (!toAdd.isEmpty())
+        {
+            for (Integer add : toAdd)
+                addDataTypeExclusion(add, dataType, excludedContainerId, user);
+        }
+
+        if (!toRemove.isEmpty())
+            removeDataTypeExclusion(toRemove, dataType, excludedContainerId);
+    }
+
+    @Override
+    public void ensureDataTypeContainerExclusions(@NotNull DataTypeForExclusion dataType, @Nullable Collection<String> excludedContainerIds, @NotNull Integer dataTypeId, User user)
+    {
+        if (excludedContainerIds == null)
+            return;
+
+        Set<String> previousExclusions = getDataTypeContainerExclusions(dataType, dataTypeId);
+        Set<String> updatedExclusions = new HashSet<>(excludedContainerIds);
+
+        Set<String> toAdd = new HashSet<>(updatedExclusions);
+        toAdd.removeAll(previousExclusions);
+
+        Set<String> toRemove = new HashSet<>(previousExclusions);
+        toRemove.removeAll(updatedExclusions);
+
+        if (!toAdd.isEmpty())
+        {
+            for (String add : toAdd)
+            {
+                addDataTypeExclusion(dataTypeId, dataType, add, user);
+                addAuditEventForDataTypeContainerUpdate(dataType, add, user);
+            }
+        }
+
+        if (!toRemove.isEmpty())
+        {
+            for (String remove : toRemove)
+            {
+                removeDataTypeExclusion(Collections.singleton(dataTypeId), dataType, remove);
+                addAuditEventForDataTypeContainerUpdate(dataType, remove, user);
+            }
+        }
+    }
+
+    private void addAuditEventForDataTypeContainerUpdate(DataTypeForExclusion type, String containerId, User user)
+    {
+        Container container = ContainerManager.getForId(containerId);
+        if (container != null)
+        {
+            Set<Integer> exclusions = _getContainerDataTypeExclusions(type, containerId);
+            String auditMsg = ("Data exclusion for folder " + container.getName() + " was updated.\n")
+                    + getDisabledDataTypeAuditMsg(type, exclusions.stream().toList(), true);
+            AuditTypeEvent event = new AuditTypeEvent(ContainerAuditProvider.CONTAINER_AUDIT_EVENT, container.getId(), auditMsg);
+            AuditLogService.get().addEvent(user, event);
+        }
+    }
+
+    @Override
+    public String getDisabledDataTypeAuditMsg(DataTypeForExclusion type, List<Integer> ids, boolean isUpdate)
+    {
+        StringBuilder builder = new StringBuilder();
+        if (ids != null && (isUpdate || !ids.isEmpty()))
+        {
+            if (isUpdate && ids.isEmpty())
+                builder.append(type.name()).append( " exclusion has been cleared.\n");
+            else
+                builder.append("Excluded ").append(type.name()).append(": ").append(StringUtils.join(ids, ", ")).append(".\n");
+        }
+        return builder.toString();
     }
 
     @Override
@@ -8300,12 +8706,21 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return count;
     }
 
-    public static Pair<Integer, Integer> getCurrentAndCrossFolderDataCount(Collection<Integer> rowIds, boolean isSample, Container container)
+    public static Pair<Integer, Integer> getCurrentAndCrossFolderDataCount(Collection<Integer> rowIds, String dataType, Container container)
     {
         DbSchema expSchema = DbSchema.get("exp", DbSchemaType.Module);
         SqlDialect dialect = expSchema.getSqlDialect();
 
-        TableInfo tableInfo = isSample ? ExperimentService.get().getTinfoMaterial() : ExperimentService.get().getTinfoData();
+        TableInfo tableInfo;
+        if ("sample".equalsIgnoreCase(dataType))
+            tableInfo = ExperimentService.get().getTinfoMaterial();
+        else if ("data".equalsIgnoreCase(dataType))
+            tableInfo = ExperimentService.get().getTinfoData();
+        else if ("assayrun".equalsIgnoreCase(dataType))
+            tableInfo = ExperimentService.get().getTinfoExperimentRun();
+        else
+            return null;
+
         SQLFragment currentFolderCountSql = new SQLFragment()
                 .append(" SELECT COUNT(*) FROM ")
                 .append(tableInfo, "t")
@@ -8399,7 +8814,7 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
                 TableInfo dataClassTable = schema.getTable(dataClass.getName());
 
                 // update exp.data.container
-                int updateCount = updateContainer(getTinfoData(), "rowId", dataIds, targetContainer, user);
+                int updateCount = ContainerManager.updateContainer(getTinfoData(), "rowId", dataIds, targetContainer, user, true);
                 updateCounts.put("sources", updateCounts.get("sources") + updateCount);
 
                 // update for exp.object.container
@@ -8410,6 +8825,14 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
 
                 // update core.document.container for any files attached to the data objects that are moving
                 moveDataClassObjectAttachments(dataClass, classObjects, targetContainer, user);
+
+                // LKB registry data class objects can have related junction list rows that need to be updated as well.
+                // Since those tables already wire up trigger scripts, we'll use that mechanism here as well for the move event.
+                BatchValidationException errors = new BatchValidationException();
+                Map<String, Object> extraContext = Map.of("targetContainer", targetContainer, "classObjects", classObjects, "dataIds", dataIds);
+                dataClassTable.fireBatchTrigger(sourceContainer, user, TableInfo.TriggerType.MOVE, false, errors, extraContext);
+                if (errors.hasErrors())
+                    throw errors;
 
                 // move audit events associated with the sources that are moving
                 int auditEventCount = QueryService.get().moveAuditEvents(targetContainer, dataIds, "exp.data", dataClassTable.getName());
@@ -8458,17 +8881,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
     {
         QueryService queryService = QueryService.get();
         queryService.getDefaultAuditHandler().addSummaryAuditEvent(user, container, dataClassTable, QueryService.AuditAction.UPDATE, rowCount, AuditBehaviorType.SUMMARY, auditUserComment);
-    }
-
-    public int updateContainer(TableInfo dataTable, String idField, List<Integer> ids, Container targetContainer, User user)
-    {
-        SQLFragment dataUpdate = new SQLFragment("UPDATE ").append(dataTable)
-                .append(" SET container = ").appendValue(targetContainer.getEntityId())
-                .append(", modified = ").appendValue(new Date())
-                .append(", modifiedby = ").appendValue(user.getUserId())
-                .append(" WHERE ").append(idField);
-        dataTable.getSchema().getSqlDialect().appendInClauseSql(dataUpdate, ids);
-        return new SqlExecutor(dataTable.getSchema()).execute(dataUpdate);
     }
 
     private void moveDataClassObjectAttachments(ExpDataClass dataClass, Collection<ExpData> classObjects, Container targetContainer, User user)
@@ -8610,8 +9022,117 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
         return runCount;
     }
 
+    @Override
+    public Map<String, Integer> moveAssayRuns(@NotNull List<? extends ExpRun> assayRuns, Container container, Container targetContainer, User user, String userComment, AuditBehaviorType auditBehavior)
+    {
+        if (assayRuns.isEmpty())
+            throw new IllegalArgumentException("No assayRuns provided to move operation.");
+
+        Map<ExpProtocol, List<ExpRun>> protocolMap = new HashMap<>();
+        assayRuns.forEach(run ->
+                protocolMap.computeIfAbsent(run.getProtocol(), t -> new ArrayList<>()).add(run));
+
+        List<String> runLsids = assayRuns.stream().map(ExpRun::getLSID).toList();
+
+        ExperimentService expService = ExperimentService.get();
+
+        AbstractAssayProvider.AssayMoveData assayMoveData = new AbstractAssayProvider.AssayMoveData(new HashMap<>(), new HashMap<>());
+        try (DbScope.Transaction transaction = ensureTransaction())
+        {
+            if (auditBehavior != null && AuditBehaviorType.NONE != auditBehavior)
+            {
+                TransactionAuditProvider.TransactionAuditEvent auditEvent = AbstractQueryUpdateService.createTransactionAuditEvent(targetContainer, QueryService.AuditAction.UPDATE);
+                auditEvent.setRowCount(assayRuns.size());
+                AbstractQueryUpdateService.addTransactionAuditEvent(transaction, user, auditEvent);
+            }
+
+            for (Map.Entry<ExpProtocol, List<ExpRun>> entry: protocolMap.entrySet())
+            {
+                ExpProtocol protocol = entry.getKey();
+                AssayProvider provider = AssayService.get().getProvider(protocol);
+                List<ExpRun> runs = entry.getValue();
+                if (provider != null)
+                {
+                    provider.moveRuns(runs, targetContainer, user, assayMoveData);
+                    Map<String, Integer> counts = assayMoveData.counts();
+                    int auditEventCount = expService.moveAuditEvents(targetContainer, runLsids);
+                    counts.put("auditEvents", counts.getOrDefault("auditEvents", 0) + auditEventCount);
+                    if (auditBehavior != null && AuditBehaviorType.NONE != auditBehavior)
+                    {
+                        for (ExpRun run : runs)
+                        {
+                            run.setContainer(targetContainer);
+                            auditRunEvent(user, protocol, run, null, "Assay run was moved.", userComment);
+                        }
+                    }
+                }
+            }
+
+            transaction.addCommitTask(() -> {
+                int fileMoveCount = 0;
+                for (List<AbstractAssayProvider.AssayFileMoveData> runFileRenameData : assayMoveData.fileMovesByRunId().values())
+                {
+                    for (AbstractAssayProvider.AssayFileMoveData renameData : runFileRenameData)
+                    {
+                        if (moveFile(renameData))
+                            fileMoveCount++;
+                    }
+                }
+                Map<String, Integer> counts = assayMoveData.counts();
+                counts.put("movedFiles", fileMoveCount);
+            }, POSTCOMMIT);
+
+            transaction.commit();
+        }
+
+        return assayMoveData.counts();
+    }
+
+    private boolean moveFile(AbstractAssayProvider.AssayFileMoveData renameData)
+    {
+        String fieldName = renameData.fieldName() == null ? "datafileurl" : renameData.fieldName();
+        File targetFile = renameData.targetFile();
+        File sourceFile = renameData.sourceFile();
+        String assayName = renameData.run().getProtocol().getName();
+        String runName = renameData.run().getName();
+        if (!targetFile.getParentFile().exists())
+        {
+            if (!targetFile.getParentFile().mkdirs())
+            {
+                LOG.warn(String.format("Creation of target directory '%s' to move file '%s' to, for '%s' assay run '%s' (field: '%s') failed.",
+                        targetFile.getParent(),
+                        sourceFile.getAbsolutePath(),
+                        assayName,
+                        runName,
+                        fieldName));
+                return false;
+            }
+        }
+        if (!sourceFile.renameTo(targetFile))
+        {
+            LOG.warn(String.format("Rename of '%s' to '%s' for '%s' assay run '%s' (field: '%s') failed.",
+                    sourceFile.getAbsolutePath(),
+                    targetFile.getAbsolutePath(),
+                    assayName,
+                    runName,
+                    fieldName));
+            return false;
+        }
+
+        return true;
+    }
+
+    @Override
+    public int moveAuditEvents(Container targetContainer, List<String> runLsids)
+    {
+        ExperimentAuditProvider auditProvider = new ExperimentAuditProvider();
+        return auditProvider.moveEvents(targetContainer, runLsids);
+    }
+
     public static class TestCase extends Assert
     {
+        final Logger log = LogManager.getLogger(ExperimentServiceImpl.class);
+
         @Before
         public void setUp()
         {
@@ -8632,7 +9153,6 @@ public class ExperimentServiceImpl implements ExperimentService, ObjectReference
             final User user = TestContext.get().getUser();
             final Container c = JunitUtil.getTestContainer();
             final ViewBackgroundInfo info = new ViewBackgroundInfo(c, user, null);
-            final Logger log = LogManager.getLogger(ExperimentServiceImpl.class);
 
             // assert no MaterialInput exp.object exist
             assertEquals(0L, countMaterialInputObjects(c));
